@@ -2,6 +2,11 @@
 (* *** DO NOT EDIT *** *)
 (* generated automatically by astgen, from a.ast *)
 
+
+(* *********************************************************************
+ * *********** Ast type definition ******************
+ * ********************************************************************* *)
+
 type a_type = 
   | A_B of int * b_type 
   | A_C of int * c_type list 
@@ -11,6 +16,34 @@ and b_type = int * string
 and c_type = 
   | C_A of int 
   | C_B of string 
+
+
+(* *********************************************************************
+ * *********** Constructor callbacks ******************
+ * ********************************************************************* *)
+
+
+(* *********************************************************************
+ * *********** callbacks for A ******************
+ * ********************************************************************* *)
+
+let create_A_B_constructor a0 a1 = A_B(a0, a1)
+
+let create_A_C_constructor a0 a1 = A_C(a0, a1)
+
+
+(* *********************************************************************
+ * *********** callbacks for B ******************
+ * ********************************************************************* *)
+
+
+(* *********************************************************************
+ * *********** callbacks for C ******************
+ * ********************************************************************* *)
+
+let create_C_A_constructor a0 = C_A(a0)
+
+let create_C_B_constructor a0 = C_B(a0)
 
 
 (*** Local Variables: ***)
